<resources>
    <string name="app_name">Online Channeling Application Payment</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiration">Card Expiration</string>
    <string name="security_code">Security Code</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="payment_methods">PAYMENT METHODS</string>
    <string name="debit_of_credit_card">Debit or Credit Card</string>
    <string name="paypal">PayPal</string>
</resources>